  * Ditto gnome-screensaver, gnome-power-manager.

  [ Christian Perrier ]
  * Remove ttf-thryomanes from hungarian-desktop and greek-desktop
    after being confirmed that it is no longer mandatory for
    these languages (the package is orphaned and may be removed
    from the archive)

  [ Joey Hess ]
  * Fix a funky $_ problem that broke calling task prerms on remove.
    (See #450777.)

 -- Joey Hess <joeyh@debian.org>  Sat, 10 Nov 2007 12:19:26 -0500

tasksel (2.69) unstable; urgency=low

  [ Translations of debconf templates ]
    - Nepali updated. Closes: #435330

  [ Translations of programs ]
    - Nepali updated. Closes: #435329

  [ Translations of tasks ]
    - Hungarian updated
    - French updated.
    - Swedish updated.
    - Japanese updated.
    - Basque updated.
    - Bulgarian updated.
    - Vietnamese updated.
    - Galician updated.
    - Hebrew updated.
    - Lithuanian updated.
    - Tamil updated. Closes: #432168
    - Arabic updated.
    - Thai updated.
    - Simplified Chinese updated.
    - Nepali updated. Closes: #435331
    - Spanish updated
    - Italian updated. Closes: #440215
    - Dutch updated.

  [ SZERVÁC Attila ]
  * Add ttf-sil-andika and ttf-sil-gentium to hungarian-desktop task

  [ Lior Kaplan ]
  * Add iceweasel-l10n-ku to kurish-desktop task

  [ Joey Hess ]
  * Update menu file to use new section.
  * Add arj and p7zip to gnome-desktop. These are recommended by file-roller
    and useful for interoperability with windows users who commonly use these
    formats. Closes: #414408

  [ Christian Perrier ]
  * Remove deprecated pango-libthai from the thai-desktop task.
    Closes: #433429

  [ Joey Hess ]
  * Put in an ugly hack to support chained enhances.
  * Add gnome-app-install to gnome-desktop. Closes: #435701
  * Add foo2zjs to print-server (and desktop), needed for "winprinters",
    particularly some HP Laserjets.

  [ Javier Fernandez-Sanguino ]
  * Remove doc-linux-es from the spanish task as it has been removed